--- a/index.html
+++ b/index.html
@@ -86,5 +86,5 @@
 		</ul>
 	</main>
 </body>
-<footer>&copy; OMAIGO - 1TDSPZ - 2024</footer>
+<footer>&copy; THIAGO/PIETRO - 1TDSPZ - 2024</footer>
 </html>
